# chotourl

./: .env  .gitignore  Cargo.toml  LICENSE  Readme.md  build_db.sh  package.json  pnpm-lock.yaml
artifacts/: docker-compose.yml  test.list
assets/: main.css
migrations/: 20240326220908_initial_DB_setup.sql
src/: db.rs  handlers.rs  main.rs  model.rs
src/handlers/: create.rs  delete.rs  list.rs  query.rs  redirect.rs
templates/: base.html  index.html  list_urls.html  new_url.html  not_found.html  query_url.html
